refactor: Dispatcher and Executor, should run Executor in each thread