@@ -4,6 +4,7 @@ package com.ncku_csie_union.resources;
 import java.util.*;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 
 import com.ncku_csie_union.resources.RateLimit;
 import com.ncku_csie_union.resources.interfaces.IExecutor;
@@ -14,16 +15,19 @@ public class Executor extends Base implements IExecutor {
     private String logPrefix;
     private Boolean stop;
     private RateLimit rateLimit;
+    private ExecutorService executor;
+    private Random random = new Random(System.currentTimeMillis());
     public static Integer ExecutorCount = 1;
     
 
-    public Executor(Integer rate) {
+    public Executor(Integer rate,ExecutorService exec) {
         this.name = "Executor-" + ExecutorCount++;
         this.logPrefix = "[" + name + "]";
         this.logger.Log(logPrefix + "Constructor called");
         this.rate = rate;
         this.stop = false;
-        this.rateLimit = new RateLimit(this.rate*2,this.rate);
+        this.rateLimit = new RateLimit((int)((float)this.rate),this.rate);
+        this.executor = Executors.newVirtualThreadPerTaskExecutor();
         this.logger.Log(logPrefix + "Rate: " + rate);
     }
     public void Init() {
@@ -36,25 +40,39 @@ public class Executor extends Base implements IExecutor {
             System.out.println("[x] " + Thread.currentThread() + "...");
 
             try {
-                Thread.sleep(1000);
+                // Simulate some work
+                // sleep for a random time between 0 ~ 2 seconds
+                int sleepTime = random.nextInt(10) ;
+                System.out.println("Sleeping for " + sleepTime + "ms");
+                Thread.sleep(sleepTime);
             } catch (InterruptedException e) {
                 // TODO Auto-generated catch block
+                executor.shutdown();
                 e.printStackTrace();
+                Thread.currentThread().interrupt();
+
             }
             System.out.println("=========== Running VT:" + Thread.currentThread().getName() + " Done ===========");
         }; 
-        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            while(!this.stop) {
-                this.rateLimit.GetToken();
-                executor.submit(mockTask);
+
+        new Thread( ()->{
+            try {
+                while(!this.stop) {
+                    this.rateLimit.GetToken();
+                    // executor.submit(mockTask);
+                    Future<?> future = executor.submit(mockTask);
+                    future.get();
+                }
             }
-        }
-        catch (Exception e) {
-            System.out.println("Exception: " + e);
-        }
-        finally {
-            System.out.println("ExecutorService is shutdown");
-        }
+            catch (Exception e) {
+                System.out.println("Exception: " + e);
+            }
+            finally {
+                executor.shutdown();
+                System.out.println("ExecutorService is shutdown");
+            }
+        }).start();
+        
         this.logger.Log(logPrefix + "Execute end");
     }
     public void Stop() {
